k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: registry.digitalocean.com/node-js-registry/node-app:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: registry-node-js-registry
